--- a/Banking App Final Project/Banking App Final Project.vcxproj.filters
+++ b/Banking App Final Project/Banking App Final Project.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="Banking App Final Project.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Account.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Customer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h">
