--- a/Banking App Final Project/Banking App Final Project.vcxproj
+++ b/Banking App Final Project/Banking App Final Project.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="Banking App Final Project.cpp" />
     <ClCompile Include="Customer.cpp" />
+    <ClCompile Include="Transfer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h" />
     <ClInclude Include="Customer.h" />
+    <ClInclude Include="Transfer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
