--- a/Banking App Final Project/Banking App Final Project.vcxproj
+++ b/Banking App Final Project/Banking App Final Project.vcxproj
@@ -128,12 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
+    <ClCompile Include="Bank.cpp" />
     <ClCompile Include="Banking App Final Project.cpp" />
     <ClCompile Include="Customer.cpp" />
     <ClCompile Include="Transfer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h" />
+    <ClInclude Include="Bank.h" />
     <ClInclude Include="Customer.h" />
     <ClInclude Include="Transfer.h" />
   </ItemGroup>
