--- a/BankingSystemTests/BankingSystemTests.vcxproj
+++ b/BankingSystemTests/BankingSystemTests.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{10bbb93b-f1ed-450d-8bc4-65814967edc9}</ProjectGuid>
-    <RootNamespace>BankingAppFinalProject</RootNamespace>
+    <ProjectGuid>{8731ad59-d8b7-4d6a-a62d-69340ea8eb7a}</ProjectGuid>
+    <RootNamespace>BankingSystemTests</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,9 +70,6 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath); C:\Users\John Wesley\source\repos\SSE550_BankingApp\Banking App Final Project\SharedHeaderFi</IncludePath>
-  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -130,19 +127,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Account.cpp" />
-    <ClCompile Include="Bank.cpp" />
-    <ClCompile Include="Banking App Final Project.cpp" />
-    <ClCompile Include="Customer.cpp" />
-    <ClCompile Include="sqlite3.c" />
-    <ClCompile Include="Transfer.cpp" />
+    <ClCompile Include="..\Banking App Final Project\Account.cpp" />
+    <ClCompile Include="..\Banking App Final Project\Bank.cpp" />
+    <ClCompile Include="..\Banking App Final Project\Customer.cpp" />
+    <ClCompile Include="..\Banking App Final Project\sqlite3.c" />
+    <ClCompile Include="..\Banking App Final Project\system_tests.cpp" />
+    <ClCompile Include="..\Banking App Final Project\Transfer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Account.h" />
-    <ClInclude Include="Bank.h" />
-    <ClInclude Include="Customer.h" />
-    <ClInclude Include="sqlite3.h" />
-    <ClInclude Include="Transfer.h" />
+    <ProjectReference Include="..\Banking App Final Project\Banking App Final Project.vcxproj">
+      <Project>{10bbb93b-f1ed-450d-8bc4-65814967edc9}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Banking App Final Project\Account.h" />
+    <ClInclude Include="..\Banking App Final Project\Bank.h" />
+    <ClInclude Include="..\Banking App Final Project\Customer.h" />
+    <ClInclude Include="..\Banking App Final Project\sqlite3.h" />
+    <ClInclude Include="..\Banking App Final Project\Transfer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
