--- a/Banking App Final Project/Banking App Final Project.vcxproj.filters
+++ b/Banking App Final Project/Banking App Final Project.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="sqlite3.c">
       <Filter>Source Files\ModularizedFunctions</Filter>
     </ClCompile>
+    <ClCompile Include="SavingsAccount.cpp">
+      <Filter>Source Files\Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -82,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="sqlite3.h">
       <Filter>Header Files\Modularized Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SavingsAccount.h">
+      <Filter>Header Files\Class Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
