updated TUI for all user interfaces

--- a/Banking App Final Project/Banking App Final Project.vcxproj
+++ b/Banking App Final Project/Banking App Final Project.vcxproj
@@ -126,6 +126,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)include
 </AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
